# pipeline-cli

./: .gitignore  Cargo.toml  Dockerfile  README.md  hello.kts  main.go  main.tpl  map.kts  pipeline.kts
src/: ast.rs  builtin.rs  context.rs  engine.rs  error.rs  lexer.rs  logger.rs  macro.rs  main.rs  module.rs  parser.rs  token.rs
src/core/: mod.rs  operation.rs  pipeline.rs  task.rs
src/v1/: ast.rs  expr.rs  interpreter.rs  lexer.rs  mod.rs  parser.rs  position.rs  stmt.rs  token.rs  types.rs
tests/: main.go
