[package]
name = "pipeline-cli"
version = "0.2.0"
edition = "2021"
authors = ["yanguiyuan 2736635687@qq.com"]
description = "A build tools written by rust to build project and execute a serials of task."
repository = "https://github.com/yanguiyuan/pipeline-cli.git"
license = "MIT"
[[bin]]
name = "pipeline"
path = "src/main.rs"
[dependencies]
async-trait = "0.1.74"
clap = { version = "4.4.11", features = ["derive"] }
crossterm = "0.27.0"
dirs = "5.0.1"
encoding_rs = "0.8.33"
tokio = { version = "1.34.0", features = ["full"] }
