[package]
name = "pipeline-cli"
version = "0.11.0"
edition = "2021"
authors = ["yanguiyuan 2736635687@qq.com"]
description = "A build tools written by rust to build project and execute a serials of task."
repository = "https://github.com/yanguiyuan/pipeline-cli.git"
license = "MIT"

[[bin]]
name = "pipeline"
path = "src/main.rs"
[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
dirs = "5.0.1"
encoding_rs = "0.8.33"
regex = "1.10.2"
rand = "0.9.0-alpha.1"
scanner-rust = "2.0.17"
